# meg-tests

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  README.md  contributing.html  data-analysis-pc.html  data-transfer.html  datasheets.html  genindex.html  glossary.html  index.html  meg-contraindications.html  meg-session.html  meg-settings.html  meg-triggers.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  stim-pc.html
.github/workflows/: bot.yaml  build.yml  code-style.yml  doc.yml  pytest.yaml  pytest.yml  stubs.yml
_downloads/10453ea43e4edacaf4756ff1b0a8a634/: 00_signal_space_projection.ipynb
_downloads/6a80342c03c7f01b358c68262cf365aa/: 20_rename_EEG_channels.ipynb
_downloads/7d4652b74a123eb731b0907e4627f776/: 00_precise_audio.ipynb
_downloads/7d665c6a22202f10bf10600a7d1f9ad7/: 10_sensor_positions.ipynb
_downloads/a1792b3ed9bb6d4738f1736de8a63629/: 30_cHPI.py
_downloads/b585cc9b8d538121cd63891f404421c8/: 00_signal_space_projection.py
_downloads/c12a3273f3f1bb595106f70792abd0b5/: 10_sensor_positions.py
_downloads/e47161d5607e245fbffae321f33c5872/: 00_precise_audio.py
_downloads/e725abbb584414f7a00f0c97b837946c/: 30_cHPI.ipynb
_downloads/eb0a76d5221a1314eafbf1cb873cddcf/: 10_proxy_audio_measure.ipynb
_sources/: data-transfer.rst.txt  meg-contraindications.rst.txt  meg-session.rst.txt  meg-settings.rst.txt  sg_execution_times.rst.txt  stim-pc.rst.txt
_sources/advanced/: fine_calibration.rst.txt
_sources/api/: calibration.rst.txt  eeg.rst.txt  projs.rst.txt
_sources/devices/: eye-tracker.rst.txt  visual.rst.txt
_sources/devices/audio/: index.rst.txt  natus.rst.txt  soundpixx.rst.txt
advanced/: fine_calibration.html  manual_tuning.html  service_tools.html  settings.html
api/: calibration.html  datasets.html  eeg.html  index.html  logging.html  projs.html
datasets/ssp/: measurement-info.fif
datasets/ssp/020124/: ssp_0_020124_proj.fif  ssp_60_020124_proj.fif  ssp_68_020124_proj.fif
devices/: electrical-stimulator.html  electrophysiology.html  eye-tracker.html  optimic.html  visual.html
devices/audio/: index.html  natus.html  soundpixx.html
devices/response-pads/: current-designs.html  index.html  response-pads-megin.html
doc/: conf.py  contraindications.rst  contributing.rst  data-analysis-pc.rst  data-transfer.rst  datasheets.rst  glossary.rst  index.rst  links.inc  meg-contraindications.rst  meg-session.rst  meg-settings.rst  meg-triggers.rst  optimic.rst  references.bib  sg_execution_times.rst  stim-pc.rst
doc/_static/css/: style.css
doc/advanced/: fine_calibration.rst  manual_tuning.rst  service_tools.rst  settings.rst
doc/api/: datasets.rst  eeg.rst  index.rst  logging.rst
doc/audio/: etymotic.rst  index.rst  soundpixx.rst
doc/devices/: audio.rst  electrical-stimulator.rst  electrophysiology.rst  eye-tracker.rst  index.rst  optimic.rst  visual.rst
doc/devices/audio/: etymotic.rst  index.rst  natus.rst  soundpixx.rst
doc/devices/response-pads/: current-designs.rst  index.rst
doc/stim-devices/: electrical-stimulator.rst  eye-tracker.rst  index.rst  response-pads.rst  visual.rst
doc/stim-devices/audio/: etymotic.rst  index.rst  soundpixx.rst
doc/stim-devices/response-pads/: current-designs.rst  index.rst  response-pads-megin.rst
doc/visual/: index.rst
meg_info/audio/: stimuli.py
meg_tests/audio/: __init__.py  stimuli.py
meg_tests/visuals/: __init__.py
meg_wiki/: __init__.py  __init__.pyi  calibration.py  calibration.pyi  eeg.py  eeg.pyi
meg_wiki/audio/: __init__.py  __init__.pyi  psychopy.py  psychopy.pyi  stimuli.py  stimuli.pyi
meg_wiki/audio/tests/: test_psychopy.py  test_stimuli.py
meg_wiki/datasets/: __init__.py  __init__.pyi  _fetch.py  _fetch.pyi  sample-registry.txt  sample.py  sample.pyi
meg_wiki/datasets/tests/: test_sample.py
meg_wiki/projs/: __init__.py  __init__.pyi  _utils.py  _utils.pyi  io.py  io.pyi  utils.py
meg_wiki/projs/tests/: test_io.py
meg_wiki/tests/: test_eeg.py
meg_wiki/utils/: _docs.py  _tests.py  config.py  config.pyi  logs.py  logs.pyi
meg_wiki/utils/tests/: test_logs.py
pdfs/questionnaires/: Questionnaire_MEG_fr.docx
resources/map-h4/: map-h4.odp
resources/questionnaires/: Questionnaire_MEG_en.docx  Questionnaire_MEG_fr.docx
tools/: stubgen.py
tutorials/: 00_logging.py  00_signal_space_projection.py  10_sensor_positions.py  20_rename_EEG_channels.py  30_cHPI.py  README.rst
tutorials/megin/: 00_signal_space_projection.py  10_sensor_positions.py  20_rename_EEG_channels.py  30_cHPI.py  40_unstable_triggers.py  README.rst
tutorials/stimulation/: 00_precise_audio.py  10_proxy_audio_measure.py  README.rst  precise_audio.py
