[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'meg_wiki'
version = '0.1.0'
description = 'Info, test and demo for the MEGIN Triux Neo System at the Human Neuroscience Platform in Geneva. '
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'meg',
    'neuroscience',
    'timings',
    'tests',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
dependencies = [
    'bsl',
    'numpy>=1.21',
    'packaging',
    'pooch',
    'psutil',
    'psychopy',
    'stimuli',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
doc = [
    'furo',
    'matplotlib',
    'memory-profiler',
    'numpydoc',
    'sphinx!=7.2.*',
    'sphinxcontrib-bibtex',
    'sphinx-copybutton',
    'sphinx-design',
    'sphinx-gallery',
    'sphinx-issues',
]
style = [
    'bibclean',
    'black',
    'codespell',
    'isort',
    'pydocstyle[toml]',
    'ruff',
]
test = [
    'pytest',
    'pytest-cov',
    'pytest-timeout',
]
all = [
    'meg_wiki[build]',
    'meg_wiki[doc]',
    'meg_wiki[style]',
    'meg_wiki[test]',
]
full = [
    'meg_wiki[all]',
]

[project.urls]
homepage = 'https://github.com/fcbg-hnp-meeg/meg_wiki'
documentation = 'https://github.com/fcbg-hnp-meeg/meg_wiki'
source = 'https://github.com/fcbg-hnp-meeg/meg_wiki'
tracker = 'https://github.com/fcbg-hnp-meeg/meg_wiki/issues'

[project.scripts]
meg_wiki-sys_info = 'meg_wiki.commands.sys_info:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['meg_wiki*']
exclude = ['meg_wiki*tests']

[tool.setuptools.package-data]
"meg_wiki.datasets" = ["sample-registry.txt"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | .github
    | .ruff_cache
    | setup.py
    | doc/
    | examples/
    | tutorials/
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 88
py_version = 39
extend_skip_glob = [
    'setup.py',
    'doc/*',
    'examples/*',
    'tutorials/*',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^meg_wiki.*'
add_ignore = 'D100,D104,D107'

[tool.ruff]
line-length = 88
extend-exclude = [
    "doc",
    "setup.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/meg_wiki/_version.py',
    '**/meg_wiki/commands/*',
    '**/meg_wiki/utils/_fixes.py',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
